add Palindrome to repo by submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mini_project/FizzBuzz"]
 	path = mini_project/FizzBuzz
 	url = https://github.com/AliGhanizade/FizzBuzz.git
+[submodule "mini_project/Palindrome"]
+	path = mini_project/Palindrome
+	url = https://github.com/AliGhanizade/Palindrome
