--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "mini_project/MinMaxSlice"]
 	path = mini_project/MinMaxSlice
 	url = https://github.com/AliGhanizade/MinMaxSlice.git
+[submodule "week_4/Todo"]
+	path = week_4/Todo
+	url = https://github.com/AliGhanizade/TodoCLI
